# fishpool

./: .gitignore  Cargo.toml  README.MD
modules/: Cargo.toml
modules/src/: crypto.rs  db.rs  lib.rs  response.rs  result.rs  salt.rs
modules/src/jwt/: mod.rs
modules/src/static_files/: router.rs
modules/src/user/: handler.rs  mod.rs  model.rs  req.rs  request.rs  response.rs  router.rs  service.rs  service_local.rs
modules/src/websocket/: client.rs  handler.rs  handler_ext.rs  mod.rs  router.rs  server.rs
web/: Cargo.toml  README.MD
web/src/: main.rs  route.rs
