[workspace]
resolver = "2"

package = { rust-version = "1.80.0" }
members = [ "modules","web"]
# Forbid unsafe code
[workspace.lints.rust]
unsafe-code = "forbid"

[workspace.dependencies]
salvo = "0.74.*"
anyhow = "1.0.*"
jsonwebtoken = "8.3.*"
serde = { version = "1.0.*", features = ["derive"] }
chrono = "0.4.*"