[workspace]
resolver = "2"

package = { rust-version = "1.80.0" }
members = ["modules", "web"]
# Forbid unsafe code
[workspace.lints.rust]
unsafe-code = "forbid"

[workspace.dependencies]
salvo = { version = "0.74.*", features = ["session", "websocket","serve-static"] }
validator = { version = "0.19.*", features = ["derive"] }
anyhow = "1.0.*"
jsonwebtoken = "9.3.*"
serde = { version = "1.0.*", features = ["derive"] }
chrono = "0.4.*"
