[package]
name = "modules"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
jsonwebtoken.workspace = true
serde = "1.0.144"  # 更新此行
chrono.workspace = true
uuid = { version = "1.11.0", features = ["v4"] }
salvo.workspace = true
validator.workspace = true
regex = "1.7.6"
serde_json = "1.0.80"
tracing = "0.1.41"
sea-orm = { version = "1.1.*", features = [
    "runtime-tokio"
] }
log = "0.4.22"
rand = "0.8.5"
bcrypt = "0.16.0"
async-trait = "0.1.83"
dashmap = "*"
[lints]
workspace = true
