[package]
name = "modules"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
jsonwebtoken.workspace = true
serde = "1.0.144"  # 更新此行
chrono.workspace = true
uuid = { version = "1.11.0", features = ["v4"] }
salvo.workspace = true
validator.workspace = true
serde_json = "1.0.80"
tracing = "0.1.41"
sea-orm = { version = "1.1.*", features = [
    "runtime-tokio"
] }
rand = "0.8.5"
bcrypt = "0.16.0"
async-trait = "0.1.83"
dashmap = "*"
tokio = "1.42.0"
futures-util = "0.3.31"
[lints]
workspace = true
